# Agentic-AI

blockstream-data-101/: main.py  pyproject.toml
day-01-hello-agent/: main.py  pyproject.toml
day-02-sats-agent/: README.md  main.py  pyproject.toml
day-03-order-parser/: main.py  pyproject.toml
escom/: main.py  pyproject.toml
gitgpt/: main.py  models.py  pyproject.toml  service.py
github-assistant-demo/: main.py  models.py  pyproject.toml  service.py
movie-recommendation/: main.py  pyproject.toml
movie-recommendation/student-report-generator/: main.py  pyproject.toml
mra-chat-bot/: main.py  pyproject.toml
smart-calculator/: main.py  pyproject.toml
student-report-generator/: main.py  pyproject.toml
weather-agent/: main.py  pyproject.toml
