[project]
name = "weather-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
